完成“失败（lose）”判断和透明盖板处理

--- a/index.css
+++ b/index.css
@@ -7,7 +7,12 @@ body {
     line-height: 0;
     background-color: #999;
 }
-
+#cover {
+    top: 0;
+    left: 0;
+    z-index: 9;
+    position: absolute;
+}
 .tmpl {
     margin: 2px;
     width: 30px;
