新增：暂停、继续、改变难度、停止、重来、进度信息

--- a/index.css
+++ b/index.css
@@ -34,6 +34,12 @@ body {
     font-size: 5em;
     display: inline-block;
 }
+#modBtns, #optBtns {
+    margin-bottom: 5px;
+}
+#progressInfo b {
+    margin-right: 5px;
+}
 .close {
     background-color: #666;
 }
