新增：赢得游戏的判断

--- a/index.css
+++ b/index.css
@@ -87,3 +87,7 @@ body {
     color: red;
     text-shadow: 0 0 20px red;
 }
+.winMsg {
+    color: greenyellow;
+    text-shadow: 0 0 20px white;
+}
