新增：失败后显示所有地雷、突出所有误判的主动标记

--- a/index.css
+++ b/index.css
@@ -83,6 +83,18 @@ body {
 .die {
     background-color: red;
 }
+.wrong {
+    background-color: white;
+}
+.wrong b {
+    color: red;
+}
+.notFound {
+    background-color: black;
+}
+.notFound b {
+    color: red;
+}
 .loseMsg {
     color: red;
     text-shadow: 0 0 20px red;
