center the div#sandbox
内容居中

--- a/index.css
+++ b/index.css
@@ -2,8 +2,10 @@ body {
     min-height: 800px;
     position: relative;
     user-select: none;
+    text-align: center;
 }
 #sandbox {
+    margin: 0 auto;
     line-height: 0;
     position: relative;
     border-radius: 2px;
